--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
+    "import re\n",
     "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -21,34 +22,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "credits = pd.read_csv('credits.csv')\n",
-    "keywords = pd.read_csv('keywords.csv')\n",
-    "mdf = pd.read_csv('movies_metadata.csv', low_memory=False)\n",
-    "\n",
-    "credits['cast'] = credits['cast'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
-    "credits['crew'] = credits['crew'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "order of actors may matter  \n",
-    "配音"
+    "links = pd.read_csv('links.csv')\n",
+    "ratings = pd.read_csv('ratings.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "keywords['keywords'] = keywords['keywords'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
