--- a/Special Topic.ipynb
+++ b/Special Topic.ipynb
@@ -4,57 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Kaggle API"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "!pip install kaggle  \n",
-    "!kaggle datasets download -d rounakbanik/the-movies-dataset  \n",
-    "!kaggle datasets download -d tmdb/tmdb-movie-metadata  \n",
-    "!kaggle datasets download -d carolzhangdc/imdb-5000-movie-dataset  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Unzip files"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "from zipfile import ZipFile  \n",
-    "ZipFile('imdb-5000-movie-dataset.zip').extractall()  \n",
-    "ZipFile('tmdb-movie-metadata.zip').extractall()  \n",
-    "ZipFile('the-movies-dataset.zip').extractall()  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Load Packages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "\n",
+    "import re\n",
     "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "from ast import literal_eval\n",
     "from unicodedata import normalize\n",
     "from dateutil.parser import parse"
    ]
@@ -63,65 +31,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load Datasets"
+    "# Import Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 785,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmdf1 = pd.read_csv('tmdb_5000_credits.csv')\n",
-    "tmdf2 = pd.read_csv('tmdb_5000_movies.csv')\\\n",
-    ".drop(['budget', 'homepage', 'original_title', 'overview', 'status', 'tagline',\\\n",
-    "       'revenue', 'popularity'], axis = 1)\n",
-    "tmdf1.columns = ['id','title','cast','crew']\n",
-    "tmdf1['cast'] = tmdf1['cast'].apply(json.loads)\\\n",
-    ".apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
-    "tmdf1['crew'] = tmdf1['crew'].apply(json.loads)\\\n",
-    ".apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
-    "tmdf2['keywords'] = tmdf2['keywords'].apply(json.loads)\\\n",
-    ".apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
-    "tmdf2['production_companies'] = tmdf2['production_companies'].apply(json.loads)\\\n",
-    ".apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
-    "tmdf2['production_countries'] = tmdf2['production_countries'].apply(json.loads)\\\n",
-    ".apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
-    "tmdf2['spoken_languages'] = tmdf2['spoken_languages'].apply(json.loads)\\\n",
-    ".apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
-    "tmdf2['genres'] = tmdf2['genres'].apply(json.loads)\\\n",
-    ".apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\\\n",
-    ".apply(lambda x: [i.replace('Science Fiction','Sci-Fi') for i in x])\\\n",
-    "#.apply(lambda x: (try: x.remove('TV Movie')))\\\n",
-    "#.apply(lambda x: '|'.join(x))\n",
+    "credits = pd.read_csv('credits.csv')\n",
+    "keywords = pd.read_csv('keywords.csv')\n",
+    "mdf = pd.read_csv('movies_metadata.csv', low_memory=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credits['cast'] = credits['cast'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
+    "credits['crew'] = credits['crew'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
+    "keywords['keywords'] = keywords['keywords'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
     "\n",
-    "imdf = pd.read_csv('movie_metadata.csv').rename(columns={'movie_title' : 'title'})\\\n",
-    ".drop_duplicates(subset=['title', 'duration', 'color'])\\\n",
-    ".drop(['budget', 'gross', 'facenumber_in_poster', 'movie_imdb_link'], axis=1)\n",
-    "imdf = imdf.drop(imdf.columns[imdf.columns.str.contains('likes|reviews')].values.tolist(), axis = 1)\n",
-    "imdf['title'] = imdf['title'].apply(lambda x: unicodedata.normalize('NFKD', x))\\\n",
-    ".apply(lambda x: x[:-1]).apply(lambda x: x.lower())\n",
-    "imdf['genres'] = imdf['genres'].apply(lambda x: x.split(sep = '|'))\n",
-    "imdf['plot_keywords'] = imdf['plot_keywords'].fillna('None')\\\n",
-    ".apply(lambda x: x.split(sep = '|'))\n",
+    "r = re.compile('\\d{4}[-]\\d{2}[-]\\d{2}')\n",
+    "r = list(filter(r.match, mdf.id.tolist()))\n",
+    "mdf = mdf.drop(mdf[mdf.id.apply(lambda x: x in r)].index)\n",
+    "mdf.id = mdf.id.apply(int)\n",
     "\n",
-    "df = tmdf1.merge(tmdf2,on = ['id', 'title'])\n",
-    "df['title'] = df['title'].apply(lambda x: x.lower())\n",
-    "df = df.merge(imdf, on = ['title'], how = 'outer').drop_duplicates(['title'], keep = False)\n",
-    "df[['runtime', 'duration']] = df[['runtime', 'duration']].fillna(0.0)\n",
-    "df['genres'] = (df.genres_x+df.genres_y).fillna('N').apply(lambda x: list(set(x)))\n",
-    "df.cast = (df.cast + df.actor_1_name.apply(lambda x: [x])\\\n",
-    "+ df.actor_2_name.apply(lambda x: [x]) + df.actor_3_name.apply(lambda x: [x]))\\\n",
-    ".fillna('N').apply(lambda x: list(set(x)))\n",
-    "df.keywords = (df.keywords + df.plot_keywords).fillna('N').apply(lambda x: list(set(x)))\n",
-    "df.language = (df.language.apply(lambda x: [x]) + df.original_language.apply(lambda x: [x])\\\n",
-    "               + df.spoken_languages).fillna('N').apply(lambda x: list(set(x)))\n",
-    "df.crew = (df.crew + df.director_name.apply(lambda x: [x])).fillna('N').apply(lambda x: list(set(x)))\n",
-    "df.title_year = df.title_year.fillna(1880)\\\n",
-    ".combine(df.release_date.fillna('1880').apply(lambda x: parse(x).year), lambda x,y: x if x >= y else y)\n",
-    "df.runtime = df.runtime.fillna(0).combine(df.duration.fillna(0), lambda x,y: x if x >= y else y)\n",
-    "df.drop(['genres_x', 'genres_y', 'actor_1_name', 'actor_2_name', 'actor_3_name', 'plot_keywords',\\\n",
-    "         'original_language', 'spoken_languages', 'director_name', 'release_date', 'duration'], axis=1, inplace=True)"
+    "df = credits.merge(keywords, how='inner').merge(mdf, how = 'inner')\\\n",
+    "[['id', 'title', 'cast', 'crew', 'genres', 'keywords', 'production_companies', 'production_countries',\\\n",
+    "  'release_date', 'runtime', 'spoken_languages', 'vote_average', 'vote_count']]\\\n",
+    ".dropna(subset=['production_companies', 'production_countries', 'spoken_languages'])\n",
+    "\n",
+    "df['genres'] = df['genres'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\\\n",
+    "#.apply(lambda x: [i.replace('Science Fiction','Sci-Fi') for i in x])\\\n",
+    "df['production_companies'] = df['production_companies'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
+    "df['production_countries'] = df['production_countries'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])\n",
+    "df['spoken_languages'] = df['spoken_languages'].apply(literal_eval).apply(lambda x: [value for i in x for key, value in i.items() if key == 'name'])"
    ]
   }
  ],
