--- a/MovieLens.ipynb
+++ b/MovieLens.ipynb
@@ -2,38 +2,348 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Download and Unzip Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('ml-100k.zip', <http.client.HTTPMessage at 0x28db50f2dd8>)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from urllib.request import urlretrieve\n",
-    "urlretrieve(\"http://files.grouplens.org/datasets/movielens/ml-latest.zip\", \"ml-latest.zip\")"
+    "urlretrieve(\"http://files.grouplens.org/datasets/movielens/ml-100k.zip\", \"ml-100k.zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "from zipfile import ZipFile\n",
+    "ZipFile('ml-100k.zip').extractall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Env Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "import findspark\n",
+    "findspark.init(\"C:\\\\Users\\\\Owner\\\\scoop\\\\apps\\\\spark\\\\current\",)\n",
+    "\n",
+    "from pyspark.sql import SparkSession"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "SparkSession is more welcomed after Spark 2.0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "spark = SparkSession.builder.getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "You can easily go back to sparkContext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "sc = spark.sparkContext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.recommendation import ALS\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "from pyspark.sql.types import IntegerType, FloatType"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Explore Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "movielens = sc.textFile(\"ml-100k/u.data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "mls = movielens.map(lambda l: l.split('\\t')).toDF()\n",
+    "mls = mls.withColumnRenamed(\"_3\", \"rating\").withColumnRenamed(\n",
+    "    \"_1\", \"userId\").withColumnRenamed(\"_2\", \"movieId\")\n",
+    "mls = mls.withColumn(\"userId\", mls[\"userId\"].cast(IntegerType())).withColumn(\n",
+    "    \"movieId\", mls[\"movieId\"].cast(IntegerType())).withColumn(\"rating\", mls[\"rating\"].cast(FloatType()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "mls = mls.select([\"userId\", 'movieId', 'rating'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+-------+------+\n",
+      "|userId|movieId|rating|\n",
+      "+------+-------+------+\n",
+      "|   196|    242|   3.0|\n",
+      "|   186|    302|   3.0|\n",
+      "|    22|    377|   1.0|\n",
+      "|   244|     51|   2.0|\n",
+      "|   166|    346|   1.0|\n",
+      "+------+-------+------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mls.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------+-----------------+------------------+\n",
+      "|summary|            userId|          movieId|            rating|\n",
+      "+-------+------------------+-----------------+------------------+\n",
+      "|  count|            100000|           100000|            100000|\n",
+      "|   mean|         462.48475|        425.53013|           3.52986|\n",
+      "| stddev|266.61442012750945|330.7983563255858|1.1256735991443179|\n",
+      "|    min|                 1|                1|               1.0|\n",
+      "|    max|               943|             1682|               5.0|\n",
+      "+-------+------------------+-----------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mls.describe().show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "from zipfile import ZipFile\n",
-    "ZipFile('ml-latest.zip').extractall()"
+    "# Movie Recommendation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from datetime import datetime"
+    "train, test = mls.randomSplit([0.7, 0.3], 363)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69893"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = pd.read_csv(\"ml-latest/ratings.csv\")\n",
-    "movies = pd.read_csv(\"ml-latest/movies.csv\")"
+    "als = ALS(userCol='userId', itemCol='movieId', ratingCol='rating')\n",
+    "\n",
+    "model = als.fit(train)\n",
+    "\n",
+    "predictions = model.transform(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----------------+------------------+-----------------+----------+\n",
+      "|summary|           userId|           movieId|           rating|prediction|\n",
+      "+-------+-----------------+------------------+-----------------+----------+\n",
+      "|  count|            30107|             30107|            30107|     30107|\n",
+      "|   mean|460.5582422692397|425.93765569468894|3.529677483641678|       NaN|\n",
+      "| stddev|266.2311117623146| 330.3187214122093|1.122862210258293|       NaN|\n",
+      "|    min|                1|                 1|              1.0|-0.5226904|\n",
+      "|    max|              943|              1680|              5.0|       NaN|\n",
+      "+-------+-----------------+------------------+-----------------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions.describe().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+------------------+------------------+-----------------+------------------+\n",
+      "|summary|            userId|           movieId|           rating|        prediction|\n",
+      "+-------+------------------+------------------+-----------------+------------------+\n",
+      "|  count|             30038|             30038|            30038|             30038|\n",
+      "|   mean| 460.6113922365004|423.61312337705573|3.532325720753712|3.3958862769979956|\n",
+      "| stddev|266.24432834107756|326.91610055410786|1.120946333236851|0.7169788128622192|\n",
+      "|    min|                 1|                 1|              1.0|        -0.5226904|\n",
+      "|    max|               943|              1664|              5.0|          5.609894|\n",
+      "+-------+------------------+------------------+-----------------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = predictions.na.drop()\n",
+    "predictions.describe().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9291548287137773"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluator = RegressionEvaluator(metricName='rmse', labelCol='rating')\n",
+    "evaluator.evaluate(predictions)"
    ]
   },
   {
@@ -43,35 +353,6 @@
    "outputs": [],
    "source": [
     "ratings.timestamp = ratings.timestamp.apply(datetime.fromtimestamp).apply(lambda x: x.strftime('%Y'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pivoted = ratings.groupby(['movieId', 'timestamp']).count().groupby(level=[0]).cumsum().reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = pivoted.merge(movies, how='left')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = temp[['title', 'genres', 'rating', 'timestamp']]\n",
-    "temp.columns = ['name', 'type', 'value', 'date']\n",
-    "temp.to_csv('temp.csv', index = False)"
    ]
   }
  ],
@@ -92,6 +373,53 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "307.2px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
